--- a/cart-me/src/app/app.component.html
+++ b/cart-me/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid all">
     <div>
         <app-header></app-header>
-
     </div>
+    <!-- <app-loading-spinner></app-loading-spinner> -->
 </div>
 <router-outlet>
 </router-outlet>
