--- a/cart-me/src/app/components/category/categories/categories.component.html
+++ b/cart-me/src/app/components/category/categories/categories.component.html
@@ -26,7 +26,7 @@
                    {{cat.name}}
                 </td>
                 <td>
-                    | <a class="btn btn-primary btn-sm"  [routerLink]="['/editcategory']"><strong>EDIT</strong></a> |
+                    | <a class="btn btn-primary btn-sm"  [routerLink]="['/editcategory', cat.id]"><strong>EDIT</strong></a> |
                     <a class="btn btn-danger btn-sm"  asp-controller="Categories"><strong>DELETE</strong></a> |
                 </td>
             </tr>
