--- a/cart-me/src/app/components/category/upload-category/upload-category.component.html
+++ b/cart-me/src/app/components/category/upload-category/upload-category.component.html
@@ -8,15 +8,19 @@
     <div class="row">
         <div class="col-sm-6 mx-auto">
             <div class="text-center p-3">
-                <form asp-action="Create">
+                <form asp-action="Create" [formGroup]="CategoryForm" (ngSubmit)="uploadCategory()">
 
                     <div class="form-group">
-                        <input asp-for="Name" class="form-control text-center justify-content-center" placeholder = "Enter Category">
-                        <span asp-validation-for="Name" class="text-danger"></span>
+                        <input type="text" class="form-control text-center justify-content-center" placeholder = "Enter Category"
+                        formControlName="name" name="name">
+                    </div>
+                    <div class="text-danger">
+                         {{showCategoryNameErrors()}}
                     </div>
 
                     <div class="form-group">
-                        <button type="submit" value="Create" class="btn btn-primary" style="width: 300px;">SUBMIT</button>
+                        <button type="submit" value="Create" class="btn btn-primary" style="width: 300px;" 
+                        [disabled]="!CategoryForm.valid">SUBMIT</button>
                     </div>
                 </form>
             </div>
