--- a/cart-me/src/app/components/category/edit-category/edit-category.component.html
+++ b/cart-me/src/app/components/category/edit-category/edit-category.component.html
@@ -8,15 +8,19 @@
     <div class="row">
         <div class="col-12">
             <div class="text-center">
-                <form asp-action="Edit">
-
+                <form asp-action="Create" [formGroup]="CategoryForm" (ngSubmit)="editCategory()">
+                
                     <div class="form-group">
-                        <input asp-for="Name" class="form-control text-center justify-content-center">
-                        <span asp-validation-for="Name" class="text-danger"></span>
+                        <input type="text" class="form-control text-center justify-content-center" placeholder="Enter Category"
+                            formControlName="name" name="name">
                     </div>
-
+                    <div class="text-danger">
+                        {{showCategoryNameErrors()}}
+                    </div>
+                
                     <div class="form-group">
-                        <button type="submit" value="Create" class="btn btn-primary" style="width: 300px;">SUBMIT</button>
+                        <button type="submit" value="Create" class="btn btn-primary" style="width: 300px;"
+                            [disabled]="!CategoryForm.valid">SUBMIT</button>
                     </div>
                 </form>
             </div>
