--- a/cart-me/src/app/components/category/category-delete/category-delete.component.html
+++ b/cart-me/src/app/components/category/category-delete/category-delete.component.html
@@ -1,1 +1,27 @@
-<p>category-delete works!</p>
+
+<br />
+<div class="text-center">
+ <h4><strong>DELETE CATEGORY</strong></h4>
+ <div>
+  <h4>Are you sure you want to delete this Category?</h4>
+ </div>
+</div>
+<hr />
+<div class="container text-center">
+ <hr />
+ <dl class="row">
+  <dt class="col-sm-6">
+   CATEGORY
+  </dt>
+  <dd class="col-sm-6">
+   CATEGORY
+  </dd>
+ </dl>
+ <hr class="btn-primary" />
+ <form asp-action="Delete">
+  <input type="hidden" asp-for="Id" />
+  <input type="submit" value="Delete" class="btn btn-danger" /> |
+  <a asp-action="Index"><strong>BACK</strong></a>
+ </form>
+</div>
+
