--- a/cart-me/src/app/components/cart/cart.component.html
+++ b/cart-me/src/app/components/cart/cart.component.html
@@ -18,8 +18,8 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>COCONUT RICE</td>
-                    <td> 2</td>
+                    <td> EMPTY </td>
+                    <td> 0</td>
                     <td>
                         <a asp-action="AddToCart" asp-controller="Cart" asp-route-id="@item." class="btn btn-primary btn-sm">+</a> |
                         <a asp-action="DecreaseFromCart" asp-controller="Cart" asp-route-id="@item." class="btn btn-success btn-sm">-</a> |
@@ -33,8 +33,8 @@
                                 </svg>
                         </a>
                     </td>
-                    <td> $3.80</td>
-                    <td> $4.00</td>
+                    <td> $0.80</td>
+                    <td> $0.00</td>
                 </tr>
             </tbody>
             <tr>
@@ -42,7 +42,7 @@
                     <div class="d-flex ml-2 mr-2 pl-2 pr-2 pt-3">
                         <hr class="btn-dark">
                     <span >
-                        <h3 ><strong>GRAND TOTAL : $4.00</strong></h3>
+                        <h3 ><strong>GRAND TOTAL : $0.00</strong></h3>
                         
                     </span>
                     </div>
