--- a/cart-me/src/app/components/product/detail-properties/detail-properties.component.html
+++ b/cart-me/src/app/components/product/detail-properties/detail-properties.component.html
@@ -13,3 +13,6 @@
         Carefully fill the Required Contents to Sell & for Customers to See & Patronize you...
       </div>
     </ng-template>
+
+    <router-outlet></router-outlet>
+    
