--- a/cart-me/src/app/components/product/products-edit/products-edit.component.html
+++ b/cart-me/src/app/components/product/products-edit/products-edit.component.html
@@ -71,3 +71,5 @@
 <div class="text-center">
     <a asp-action="Index" asp-controller="Products"><strong>BACK</strong></a>
 </div>
+
+<router-outlet></router-outlet>
