--- a/cart-me/src/app/components/product/products/products.component.html
+++ b/cart-me/src/app/components/product/products/products.component.html
@@ -1,7 +1,7 @@
 <br>
 <div class="container">
     <div class="row col-md-6 mx-auto">
-      <button class="btn btn-outline-dark btnupload " [routerLink]="['/uploadproduct']" routerLinkActive="router-link-active">
+      <button class="btn btn-outline-dark btnupload" >
         <strong>
           CREATE PRODUCT
         </strong>
@@ -31,5 +31,3 @@
     </div>
     </div>
 </div>
-
-<router-outlet></router-outlet>
