--- a/cart-me/src/app/app.component.html
+++ b/cart-me/src/app/app.component.html
@@ -4,5 +4,4 @@
     </div>
     <!-- <app-loading-spinner></app-loading-spinner> -->
 </div>
-<router-outlet>
-</router-outlet>
+<router-outlet></router-outlet>
