--- a/cart-me/src/app/components/header/header.component.html
+++ b/cart-me/src/app/components/header/header.component.html
@@ -31,7 +31,7 @@
                         <a class="nav-link  text-dark " [routerLink]="[ '/categories'] " routerLinkActive="router-link-active "><strong>CATEGORIES</strong></a>
                     </li> -->
                     <li class="nav-item li">
-                        <a class="nav-link  text-dark " [routerLink]="[ '/products/prod'] " routerLinkActive="router-link-active "><strong>KITCHEN</strong></a>
+                        <a class="nav-link  text-dark " [routerLink]="[ '/products'] " routerLinkActive="router-link-active "><strong>KITCHEN</strong></a>
                     </li>
                     <li class="nav-item li">
                         <a class="nav-link  text-dark " [routerLink]="[ '/about']" routerLinkActive="router-link-active "><strong>ABOUT</strong></a>
