alertify config working

--- a/cart-me/src/app/components/account/login/login.component.html
+++ b/cart-me/src/app/components/account/login/login.component.html
@@ -33,6 +33,13 @@
                             </strong>
                         </button>
                 </div>
+                    <!-- <div>
+                        <button mat-fab-button class="btn btn-default" (click)="tick()" >
+                            <strong>
+                                Dont?
+                            </strong>
+                        </button>
+                    </div> -->
 
             </form>
         </div>
