--- a/cart-me/src/app/components/product/productsupload/productsupload.component.html
+++ b/cart-me/src/app/components/product/productsupload/productsupload.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container m-5 mx-auto">
     <div class="card box-shadow">
         <div class="text-center card-head">
             <br />
@@ -13,36 +13,36 @@
 
 
                         <div class="form-group">
-                            <label asp-for="ChefName" class="control-label"></label>
+                            <label asp-for="ChefName" class="control-label">Chef Name</label>
                             <input asp-for="ChefName" class="form-control" />
                             <span asp-validation-for="ChefName" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="MealName" class="control-label"></label>
+                            <label asp-for="MealName" class="control-label"> Meal Name</label>
                             <input asp-for="MealName" class="form-control" />
                             <span asp-validation-for="MealName" class="text-danger"></span>
                         </div>
 
                         <div class="form-group">
-                            <label asp-for="Description" class="control-label"></label>
+                            <label asp-for="Description" class="control-label">Description</label>
                             <textarea asp-for="Description" class="form-control" rows="3" placeholder="Write a brief Comment about your Product..."></textarea>
                             <span asp-validation-for="Description" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="Image" class="control-label"></label>
+                            <label asp-for="Image" class="control-label">Image File</label>
                             <div class="custom-file">
-                                <input asp-for="ImageUpload" class="form-control custom-file-input" id="customfile" />
+                                <input asp-for="ImageUpload" class="form-control custom-file-input" id="customfile" type="file" />
                                 <label class="custom-file-label" for="customfile">Choose File</label>
                             </div>
                             <span asp-validation-for="ImageUpload" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="Price" class="control-label"></label>
+                            <label asp-for="Price" class="control-label">Price</label>
                             <input asp-for="Price" class="form-control" />
                             <span asp-validation-for="Price" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="CategoryId" class="control-label"></label>
+                            <label asp-for="CategoryId" class="control-label">Category</label>
                             <select asp-for="CategoryId" asp-items="@ViewBag.CategoryId" class="form-control">
                                 <option class="form-control"  value="0">Choose a Category...</option>
                             </select>
