--- a/cart-me/src/app/components/product/products/products.component.html
+++ b/cart-me/src/app/components/product/products/products.component.html
@@ -1,8 +1,7 @@
 <br>
 <div class="container">
     <div class="row col-md-6 mx-auto">
-      <a class="btn btn-outline-dark btnupload" href="/uploadproduct" routerLinkActive="router-link-active">
-        <!-- [routerLink]="[ '/uploadproduct']" -->
+      <a class="btn btn-outline-dark btnupload" href="/uploadproduct">
         <strong>
           CREATE PRODUCT
         </strong>
