--- a/cart-me/src/app/components/account/register/register.component.html
+++ b/cart-me/src/app/components/account/register/register.component.html
@@ -89,11 +89,11 @@
                 </div>
                 <br>
 
-                <!-- <button class="btn btn-default " [routerLink]="[ '/login'] " routerLinkActive="router-link-active ">
+                <button class="btn btn-default " [routerLink]="[ '/login']" routerLinkActive="router-link-active ">
                         <strong>
                             Already have an Account?
                         </strong>
-                    </button> -->
+                    </button>
             </form>
             <hr>
         </div>
