--- a/cart-me/src/app/components/header/header.component.html
+++ b/cart-me/src/app/components/header/header.component.html
@@ -27,9 +27,9 @@
                     <li class="nav-item ">
                         <a class="nav-link  text-dark " [routerLink]="[ '/cart'] " routerLinkActive="router-link-active "><strong>CART</strong></a>
                     </li>
-                    <!-- <li class="nav-item li">
+                    <li class="nav-item li">
                         <a class="nav-link  text-dark " [routerLink]="[ '/categories'] " routerLinkActive="router-link-active "><strong>CATEGORIES</strong></a>
-                    </li> -->
+                    </li>
                     <li class="nav-item li">
                         <a class="nav-link  text-dark " [routerLink]="[ '/products'] " routerLinkActive="router-link-active "><strong>KITCHEN</strong></a>
                     </li>
