--- a/cart-me/src/app/app.component.css
+++ b/cart-me/src/app/app.component.css
@@ -1,11 +1,13 @@
 .all {
-    /* background-color: rgb(179, 198, 216); */
-    padding-left: 0px;
-    margin-left: 0%;
-    padding-right: 0px;
-    margin-right: 0%;
-    width: 100%;
-    /* height: 100vh; */
-    position: relative;
-    overflow: hidden;
+  /* background-color: rgb(179, 198, 216); */
+  padding-left: 0px;
+  margin-left: 0%;
+  padding-right: 0px;
+  margin-right: 0%;
+  width: 100%;
+  /* height: 100vh; */
+  position: relative;
+  overflow: hidden;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
