--- a/cart-me/src/app/components/account/register/register.component.html
+++ b/cart-me/src/app/components/account/register/register.component.html
@@ -10,97 +10,123 @@
             </div>
         </div>
         <hr>
-        <div class="card-body col-sm-8 w-100 mx-auto">
-            <form class="register-form w-100 novalidate" method="POST" autocomplete="off" [formGroup]="RegService.formModel" (ngSubmit)="RegisterSubmit()">
-                <div class="form-group required">
-                    <input placeholder="Firstname"  class="form-control" formControlName="Firstname" >
-                    <div class="text-danger">
-                        {{shoeFirstNameErrors()}}
-                    </div>
+
+<div class="row text-center p-1">
+    <div class="col-md-6 mx-auto">
+        <form asp-action="Register" [formGroup]="RegService.formModel" (submit)="RegisterSubmit()">
+            <div class="form-group">
+                <input type="text" name="Firstname" formControlName="Firstname" placeholder="Firstname" name="Firstname" class="form-control" />
+                <div class="text-danger">
+                    {{shoeFirstNameErrors()}}
                 </div>
-                <div class="form-group required">
-                    <input placeholder="Lastname" required type="text" class="form-control" formControlName="Lastname" name="lastname">
+            </div>
+            <div class="form-group">
+                <input type="text" name="Lastname" formControlName="Lastname" placeholder="Lastname" name="Lastname"
+                    class="form-control" />
                     <div class="text-danger">
                         {{shoeLastNameErrors()}}
                     </div>
-                </div>
-                <div class="form-group required">
-                    <input placeholder="Username" required type="text" class="form-control" formControlName="Username" name="username">
+            </div>
+            <div class="form-group">
+                <input type="text" name="Username" formControlName="Username" placeholder="Username" name="Username"
+                    class="form-control" />
                     <div class="text-danger">
-                       {{shoeUserNameErrors()}}
+                        {{shoeUserNameErrors()}}
                     </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-md-12">
+                    <input type="email" name="email" formControlName="Email" placeholder="Email" name="email"
+                        class="form-control" />
+                        <div class="text-danger">
+                            {{shoeEmailErrors()}}
+                        </div>
                 </div>
-                <div class="form-group required">
-                    <input placeholder="Email" type="text" required class="form-control" formControlName="Email" name="email">
-                    <div class="text-danger">
-                        {{shoeEmailErrors()}}
-                    </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-md-12">
+                    <input type="text" name="Address" formControlName="Address" placeholder="Address" name="Address"
+                        class="form-control" />
+                        <div class="text-danger">
+                            {{shoeAddressErrors()}}
+                        </div>
                 </div>
-                <div class="form-group required">
-                    <input placeholder="Address" type="text" required class="form-control" name="address" formControlName="Address">
-                    <div class="text-danger">
-                        {{shoeAddressErrors()}}
-                    </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-md-12">
+                    <input type="text" name="Phone" formControlName="Phone" placeholder="Phone" name="Phone" class="form-control" />
+                        <div class="text-danger">
+                            {{shoePhoneErrors()}}
+                        </div>
                 </div>
-                <div class="form-group required">
-                    <input placeholder="State" type="text" required class="form-control" name="state" formControlName="State">
-                    <div class="text-danger">
-                        {{shoeStateErrors()}}
-                    </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-md-12">
+                    <input type="text" name="State" formControlName="State" placeholder="State" name="State" class="form-control" />
+                        <div class="text-danger">
+                            {{shoeStateErrors()}}
+                        </div>
                 </div>
-                <div class="form-group required">
-                    <input placeholder="Country" type="text" required class="form-control" name="country" formControlName="Country">
+            </div>
+            <div class="form-group row">
+                <div class="col-md-12">
+                    <input type="text" name="Country" formControlName="Country" placeholder="Country" name="Country"
+                        class="form-control" />
                     <div class="text-danger">
                         {{shoeCountryErrors()}}
                     </div>
                 </div>
-                <div class="form-group required">
-                    <input placeholder="Phone" type="text" required class="form-control" formControlName="Phone" name="Phone">
-                    <div class="text-danger">
-                        {{shoePhoneErrors()}}
-                    </div>
-                </div>
-                <div class="form-group required">
-                    <input placeholder="PostalCode" type="text" required class="form-control" name="postalcode" formControlName="PostalCode" />
+            </div>
+            <div class="form-group row">
+                <div class="col-md-12">
+                    <input type="text" name="PostalCode" formControlName="PostalCode" placeholder="PostalCode" name="PostalCode"
+                        class="form-control" />
                     <div class="text-danger">
                         {{shoePostalCodeErrors()}}
                     </div>
                 </div>
-                <div formGroupName="Passwords">
-                    <div class="required form-group">
-                        <input placeholder="Password" type="password" required class="form-control" formControlName="Password" name="password">
-                        <div class="text-danger">
-                            {{shoePasswordErrors()}}
-                        </div>
-                                                           
+            </div>
+
+            <div formGroupName="Passwords">
+        <div class="form-group row">
+                <div class="col-md-12">
+                    <input type="password" name="Password" formControlName="Password" placeholder="Password" name="Password"
+                        class="form-control" />
+                    <div class="text-danger">
+                        {{shoePasswordErrors()}}
                     </div>
-                    <div class="required form-group">
-                        <input placeholder="ConfirmPassword" type="password" required class="form-control" formControlName="ConfirmPassword" name="confirmPassword">
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-md-12">
+                    <input type="password" name="ConfirmPassword" formControlName="ConfirmPassword" placeholder="Confirm Password"
+                        name="ConfirmPassword" class="form-control" />
                         <div class="text-danger">
                             {{shoeConfirmPasswordErrors()}}
                         </div>
-                    </div>
                 </div>
-                <hr>
-
-                <div>
-                    <button type="submit" id="submit" [disabled]="!RegService.formModel.valid" value="RegisterSubmit" class="button ">
-                            SUBMIT
-                        </button>
-                </div>
-                <br>
-
-                <button class="btn btn-default " [routerLink]="[ '/login']" routerLinkActive="router-link-active ">
-                        <strong>
-                            Already have an Account?
-                        </strong>
-                    </button>
-            </form>
-            <hr>
-        </div>
-
-
+            </div>
+            </div>
+    
+            <div class="form-group">
+                <button type="submit" value="Create"
+                    class="btn btn-primary text-white" [disabled]="!RegService.formModel.valid"><strong>SUBMIT</strong>
+                </button>
+            </div>
+            <br>
+            
+            <button class="btn btn-default " [routerLink]="[ '/login']" routerLinkActive="router-link-active ">
+                <strong>
+                    Already have an Account?
+                </strong>
+            </button>
+            <hr class="btn-primary"/>
+        </form>
     </div>
+ 
+</div>
+
+</div>
 </div>
 <br>
 <br>
