--- a/cart-me/src/app/components/account/sign-up/sign-up.component.html
+++ b/cart-me/src/app/components/account/sign-up/sign-up.component.html
@@ -1,3 +1,4 @@
+<!-- ReactiveForms -->
 <br>
 <div class="container">
  <div class="card box-shadow col-sm-8 mx-auto">
@@ -13,16 +14,16 @@
 
   <div class="row text-center p-1">
    <div class="col-md-6 mx-auto">
-    <form asp-action="Register" [formGroup]="RegService.formModel" (submit)="OnSubmit()">
+    <form asp-action="Register" [formGroup]="registerationForm" (ngSubmit)="OnSubmit()">
      <div class="form-group">
       <input type="text" name="Firstname" formControlName="Firstname" placeholder="Firstname" name="Firstname"
        class="form-control" />
-      <div class="text-danger">
+      <div class="text-danger" *ngIf="registerationForm.get('Firstname')?.touched && !registerationForm.get('Firstname')?.valid">
        <label
-        *ngIf="RegService.formModel.get('Firstname')?.touched && RegService.formModel.get('Firstname')?.errors?.required">First
+        *ngIf="registerationForm.get('Firstname')?.errors?.required">First
         Name is Required</label>
        <label
-        *ngIf="RegService.formModel.get('Firstname')?.touched && RegService.formModel.get('Firstname')?.errors?.maxLength">First
+        *ngIf="registerationForm.get('Firstname')?.errors?.maxLength">First
         Name must not exceed 50 characters</label>
       </div>
      </div>
@@ -37,14 +38,14 @@
       <input type="text" name="Username" formControlName="Username" placeholder="Username" name="Username"
        class="form-control" />
       <div class="text-danger">
-       {{shoeUserNameErrors()}}
+       <!-- {{shoeUserNameErrors()}} -->
       </div>
      </div>
      <div class="form-group row">
       <div class="col-md-12">
        <input type="email" name="email" formControlName="Email" placeholder="Email" name="email" class="form-control" />
        <div class="text-danger">
-        {{shoeEmailErrors()}}
+        <!-- {{shoeEmailErrors()}} -->
        </div>
       </div>
      </div>
@@ -53,7 +54,7 @@
        <input type="text" name="Address" formControlName="Address" placeholder="Address" name="Address"
         class="form-control" />
        <div class="text-danger">
-        {{shoeAddressErrors()}}
+        <!-- {{shoeAddressErrors()}} -->
        </div>
       </div>
      </div>
@@ -61,7 +62,7 @@
       <div class="col-md-12">
        <input type="text" name="Phone" formControlName="Phone" placeholder="Phone" name="Phone" class="form-control" />
        <div class="text-danger">
-        {{shoePhoneErrors()}}
+        <!-- {{shoePhoneErrors()}} -->
        </div>
       </div>
      </div>
@@ -69,7 +70,7 @@
       <div class="col-md-12">
        <input type="text" name="State" formControlName="State" placeholder="State" name="State" class="form-control" />
        <div class="text-danger">
-        {{shoeStateErrors()}}
+        <!-- {{shoeStateErrors()}} -->
        </div>
       </div>
      </div>
@@ -78,7 +79,7 @@
        <input type="text" name="Country" formControlName="Country" placeholder="Country" name="Country"
         class="form-control" />
        <div class="text-danger">
-        {{shoeCountryErrors()}}
+        <!-- {{shoeCountryErrors()}} -->
        </div>
       </div>
      </div>
@@ -87,7 +88,7 @@
        <input type="text" name="PostalCode" formControlName="PostalCode" placeholder="PostalCode" name="PostalCode"
         class="form-control" />
        <div class="text-danger">
-        {{shoePostalCodeErrors()}}
+        <!-- {{shoePostalCodeErrors()}} -->
        </div>
       </div>
      </div>
@@ -98,7 +99,7 @@
         <input type="password" name="Password" formControlName="Password" placeholder="Password" name="Password"
          class="form-control" />
         <div class="text-danger">
-         {{shoePasswordErrors()}}
+         <!-- {{shoePasswordErrors()}} -->
         </div>
        </div>
       </div>
@@ -107,7 +108,7 @@
         <input type="password" name="ConfirmPassword" formControlName="ConfirmPassword" placeholder="Confirm Password"
          name="ConfirmPassword" class="form-control" />
         <div class="text-danger">
-         {{shoeConfirmPasswordErrors()}}
+         <!-- {{shoeConfirmPasswordErrors()}} -->
         </div>
        </div>
       </div>
@@ -115,7 +116,7 @@
 
      <div class="form-group">
       <button type="submit" value="Create" class="btn btn-primary text-white"
-       [disabled]="!RegService.formModel.valid"><strong>SUBMIT</strong>
+       [disabled]="!registerationForm.valid"><strong>SUBMIT</strong>
       </button>
      </div>
      <br>
